@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-06-25T00:57:15Z",
-  "count" : 6,
+  "timestamp" : "2023-07-08T16:10:02Z",
+  "count" : 3,
   "count_minmax" : [ 3, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "count_decinc" : [ -3, +6 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -2, +4 ]
 }
