@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-08T00:54:39Z",
+  "timestamp" : "2023-07-08T16:10:02Z",
   "count_outdated" : 4694,
   "uniques_outdated" : 1328,
-  "count" : 4788,
-  "uniques" : 1385,
+  "count" : 4789,
+  "uniques" : 1386,
   "clones" : [
     {
       "timestamp": "2023-06-24T00:00:00Z",
-      "count": 6,
+      "count": 3,
       "count_minmax": [ 3, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count_decinc": [ 3, 6 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 2, 4 ]
     },
     {
       "timestamp": "2023-06-25T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2023-07-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
