@@ -1,11 +1,11 @@
 {
-  "count": 94,
-  "uniques": 46,
+  "count": 92,
+  "uniques": 44,
   "clones": [
     {
       "timestamp": "2023-06-24T00:00:00Z",
-      "count": 6,
-      "uniques": 4
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2023-06-25T00:00:00Z",
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2023-07-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
