@@ -1,3 +1,12 @@
+2023-07-08T16:10:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5495299935 # 1705
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
+* notice: last 14d: unq all: 44 92
+* notice: prev accum: outdated-unq outdated-all / unq all: 1328 4694 / 1385 4788
+* notice: next accum: outdated-unq outdated-all / unq all: 1328 4694 / 1386 4789
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -3 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-06-24 2023-07-08]
+
 2023-07-08T00:54:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5491794623 # 1703
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-08
